force-app/main/default/objects/Credential_Master__c/Credential_Master__c.object-meta.xml
<CustomObject>
    <label>Credential Master</label>
    <nameField>
        <label>Credential Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credential Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>