force-app/main/default/objects/Credential_Master__c/fields/Acquired_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Date_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquired Date Required</label>
    <type>Checkbox</type>
</CustomField>