force-app/main/default/objects/Credential_Master__c/fields/Added_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Added_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added Automatically</label>
    <type>Checkbox</type>
</CustomField>