force-app/main/default/objects/Credential_Master__c/fields/Allow_Codes__c.field-meta.xml
<CustomField>
    <fullName>Allow_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Codes</label>
    <type>Checkbox</type>
</CustomField>