force-app/main/default/objects/Credential_Master__c/fields/Allow_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Allow_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deletion</label>
    <type>Checkbox</type>
</CustomField>