force-app/main/default/objects/Credential_Master__c/fields/Allow_Override_Label__c.field-meta.xml
<CustomField>
    <fullName>Allow_Override_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Override/Label?</label>
    <type>Checkbox</type>
</CustomField>