force-app/main/default/objects/Credential_Master__c/fields/Auto_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_File_Name__c</fullName>
    <label>Auto File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>