force-app/main/default/objects/Credential_Master__c/fields/Credential_Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Credential_Effective_date__c</fullName>
    <label>Credential Effective date</label>
    <type>Date</type>
</CustomField>