force-app/main/default/objects/Credential_Master__c/fields/Credential_Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Credential_Expiration_date__c</fullName>
    <label>Credential Expiration date</label>
    <type>Date</type>
</CustomField>