force-app/main/default/objects/Credential_Master__c/fields/Credential_Form__c.field-meta.xml
<CustomField>
    <fullName>Credential_Form__c</fullName>
    <label>Credential Form</label>
    <type>Url</type>
</CustomField>