force-app/main/default/objects/Credential_Master__c/fields/Credential_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Credential_Instructions__c</fullName>
    <label>Credential Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>