force-app/main/default/objects/Credential_Master__c/fields/Credential_Instructions_Portal__c.field-meta.xml
<CustomField>
    <fullName>Credential_Instructions_Portal__c</fullName>
    <label>Credential Instructions (Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>