force-app/main/default/objects/Credential_Master__c/fields/Credential_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Credential_Master_ID__c</fullName>
    <displayFormat>CMID-{0000}</displayFormat>
    <label>Credential Master ID</label>
    <type>AutoNumber</type>
</CustomField>