force-app/main/default/objects/Credential_Master__c/fields/Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Credential_Name__c</fullName>
    <label>Credential Name</label>
    <type>TextArea</type>
</CustomField>