force-app/main/default/objects/Credential_Master__c/fields/Credential_Name_Portal__c.field-meta.xml
<CustomField>
    <fullName>Credential_Name_Portal__c</fullName>
    <label>Credential Name (Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>