force-app/main/default/objects/Credential_Master__c/fields/Credential_Pack__c.field-meta.xml
<CustomField>
    <fullName>Credential_Pack__c</fullName>
    <label>Credential Pack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>