force-app/main/default/objects/Credential_Master__c/fields/DEA_Tracking__c.field-meta.xml
<CustomField>
    <fullName>DEA_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEA Tracking</label>
    <type>Checkbox</type>
</CustomField>