force-app/main/default/objects/Credential_Master__c/fields/Document_Download__c.field-meta.xml
<CustomField>
    <fullName>Document_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Download</label>
    <type>Checkbox</type>
</CustomField>