force-app/main/default/objects/Credential_Master__c/fields/Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Document_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Required</label>
    <type>Checkbox</type>
</CustomField>