force-app/main/default/objects/Credential_Master__c/fields/DocuSign_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Template_Id__c</fullName>
    <label>DocuSign Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>