force-app/main/default/objects/Credential_Master__c/fields/E_Sign__c.field-meta.xml
<CustomField>
    <fullName>E_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Sign?</label>
    <type>Checkbox</type>
</CustomField>