force-app/main/default/objects/Credential_Master__c/fields/Effective_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Effective Date Required</label>
    <type>Checkbox</type>
</CustomField>