force-app/main/default/objects/Credential_Master__c/fields/Eligible_for_electronic_signature__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_electronic_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for electronic signature</label>
    <type>Checkbox</type>
</CustomField>