force-app/main/default/objects/Credential_Master__c/fields/Enable_Re_Verification_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Re_Verification_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Re-Verification Tracking</label>
    <type>Checkbox</type>
</CustomField>