force-app/main/default/objects/Credential_Master__c/fields/Essium_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Essium_Item_Id__c</fullName>
    <label>Essium Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>