force-app/main/default/objects/Credential_Master__c/fields/Expiration_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiration Date Required</label>
    <type>Checkbox</type>
</CustomField>