force-app/main/default/objects/Credential_Master__c/fields/Form_Document__c.field-meta.xml
<CustomField>
    <fullName>Form_Document__c</fullName>
    <label>Form/Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>