force-app/main/default/objects/Credential_Master__c/fields/Form_Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Form_Document_Description__c</fullName>
    <label>Form/Document Description</label>
    <type>TextArea</type>
</CustomField>