force-app/main/default/objects/Credential_Master__c/fields/Maximum_score__c.field-meta.xml
<CustomField>
    <fullName>Maximum_score__c</fullName>
    <label>Maximum score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>