force-app/main/default/objects/Credential_Master__c/fields/Override_Label__c.field-meta.xml
<CustomField>
    <fullName>Override_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Label</label>
    <type>Checkbox</type>
</CustomField>