force-app/main/default/objects/Credential_Master__c/fields/Parent_Credential__c.field-meta.xml
<CustomField>
    <fullName>Parent_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Credential</label>
    <referenceTo>Credential_Master__c</referenceTo>
    <relationshipLabel>Credential Masters</relationshipLabel>
    <relationshipName>Credential_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>