force-app/main/default/objects/Credential_Master__c/fields/Parent_Required_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Required_Value__c</fullName>
    <label>Parent Required Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>