force-app/main/default/objects/Credential_Master__c/fields/Pass_Score__c.field-meta.xml
<CustomField>
    <fullName>Pass_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Score</label>
    <type>Checkbox</type>
</CustomField>