force-app/main/default/objects/Credential_Master__c/fields/Pass_w_Codes__c.field-meta.xml
<CustomField>
    <fullName>Pass_w_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass w Codes</label>
    <type>Checkbox</type>
</CustomField>