force-app/main/default/objects/Credential_Master__c/fields/Portal_Placement__c.field-meta.xml
<CustomField>
    <fullName>Portal_Placement__c</fullName>
    <label>Portal Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>