force-app/main/default/objects/Credential_Master__c/fields/Re_Verification_Basis_Client__c.field-meta.xml
<CustomField>
    <fullName>Re_Verification_Basis_Client__c</fullName>
    <label>Re-Verification Basis (Client)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>