force-app/main/default/objects/Credential_Master__c/fields/Re_Verification_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Re_Verification_Frequency__c</fullName>
    <label>Re-Verification Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>