force-app/main/default/objects/Credential_Master__c/fields/Registered_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Date Required</label>
    <type>Checkbox</type>
</CustomField>