force-app/main/default/objects/Credential_Master__c/fields/Require_Copy_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Require_Copy_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Copy to Client</label>
    <type>Checkbox</type>
</CustomField>