force-app/main/default/objects/Credential_Master__c/fields/Required_By__c.field-meta.xml
<CustomField>
    <fullName>Required_By__c</fullName>
    <label>Required By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>