force-app/main/default/objects/Credential_Master__c/fields/Result_Option_Score__c.field-meta.xml
<CustomField>
    <fullName>Result_Option_Score__c</fullName>
    <label>Result Option Score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>