force-app/main/default/objects/Credential_Master__c/fields/Result_Options__c.field-meta.xml
<CustomField>
    <fullName>Result_Options__c</fullName>
    <label>Result Options</label>
    <type>TextArea</type>
</CustomField>