force-app/main/default/objects/Credential_Master__c/fields/Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Review_Result__c</fullName>
    <label>Review Result</label>
    <type>TextArea</type>
</CustomField>