force-app/main/default/objects/Credential_Master__c/fields/Sent_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Date Required</label>
    <type>Checkbox</type>
</CustomField>