force-app/main/default/objects/Credential_Master__c/fields/State_Required__c.field-meta.xml
<CustomField>
    <fullName>State_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Required</label>
    <type>Checkbox</type>
</CustomField>