force-app/main/default/objects/Credential_Master__c/fields/Type_Options__c.field-meta.xml
<CustomField>
    <fullName>Type_Options__c</fullName>
    <label>Type Options</label>
    <type>TextArea</type>
</CustomField>