force-app/main/default/objects/Credential_Master__c/fields/Type_Required__c.field-meta.xml
<CustomField>
    <fullName>Type_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type Required</label>
    <type>Checkbox</type>
</CustomField>