force-app/main/default/objects/Credential_Master__c/fields/Use_Codes__c.field-meta.xml
<CustomField>
    <fullName>Use_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Codes?</label>
    <type>Checkbox</type>
</CustomField>