force-app/main/default/objects/Credential_Master__c/fields/Use_Codes_Label__c.field-meta.xml
<CustomField>
    <fullName>Use_Codes_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Codes/ Label</label>
    <type>Checkbox</type>
</CustomField>