force-app/main/default/objects/Credential_Master__c/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <label>Verification Method</label>
    <type>TextArea</type>
</CustomField>