force-app/main/default/objects/Credential_Master__c/fields/Verification_Method_Required__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verification Method Required</label>
    <type>Checkbox</type>
</CustomField>